# sstest

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
docs/: developer.md  reference.md  tutorial.md
example/: CMakeLists.txt  README.md  example_common.h
example/0_blank/: 0-0_blank.cpp
example/1_pass/: 1-0_pass.cpp
example/2_fail/: 2-0_fail.cpp
example/3_basic/: 3-0_basic.cpp  3-1_basic.cpp
example/4_user_type/: 4-0_user_type.cpp
example/5_fixture/: 5-0_fixture.cpp
example/6_parameterized/: 6-0_parameterized.cpp
example/A_tutorial/: A-0_tutorial.cpp
include/sstest/: sstest_assertion.h  sstest_compare.h  sstest_config.cmake.h.in  sstest_config.h  sstest_console.h  sstest_def.h  sstest_exception.h  sstest_float.h  sstest_include.h  sstest_info.h  sstest_main.h  sstest_printer.h  sstest_registrar.h  sstest_registry.h  sstest_run.h  sstest_runner.h  sstest_string.h  sstest_summary.h  sstest_test.h  sstest_timer.h  sstest_traits.h  sstest_utility.h
scripts/: build_and_test.sh  copyright_banner.py
src/: CMakeLists.txt  sstest_assertion.cpp  sstest_console.cpp  sstest_exception.cpp  sstest_float.cpp  sstest_info.cpp  sstest_main.cpp  sstest_printer.cpp  sstest_registrar.cpp  sstest_registry.cpp  sstest_run.cpp  sstest_runner.cpp  sstest_string.cpp  sstest_summary.cpp  sstest_test.cpp  sstest_timer.cpp
test/: CMakeLists.txt  ctest_macros.h  test_assertion.cpp  test_compare.cpp  test_exception.cpp  test_info.cpp  test_registry.cpp  test_string.cpp  test_summary.cpp  test_test.cpp
